fixed spacing on mobile for profile photo

--- a/css/main.scss
+++ b/css/main.scss
@@ -215,6 +215,11 @@ p.byline {
 	#project-image {
 		height: 200px;
 	}
+
+	#bio-photo{
+		width: 512px;
+	}
+
 	.filters > p{
 		text-align: center
 	}
@@ -268,6 +273,11 @@ p.byline {
 }
 
 @media (max-width: 767px ) {
+	#bio-photo{
+		width: 85px;
+		margin-right: 15px;
+	}
+
 	.col-sm-12,
 	.col-sm-4{
 		padding-left: 0px;
